--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
